Change photo file paths

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <div id="image-buttons-group">
             <div class="button-with-text">
                 <a href="resources.html">
-                    <img alt="Resources" class="image-buttons-home" src="pregnant-woman.jpg">
+                    <img alt="Resources" class="image-buttons-home" src="photos/pregnant-woman.jpg">
                 </a>
                 <h2 class="button-text">Resources</h2>
             </div>
             <div class="button-with-text">
                 <a href="howToHelp.html">
-                    <img alt="How to Help" class="image-buttons-home" src="woman-with-baby.png">
+                    <img alt="How to Help" class="image-buttons-home" src="photos/woman-with-baby.png">
                 </a>
                 <h2 class="button-text">How To Help</h2>
             </div>
             <div class="button-with-text">
                 <a href="about.html">
-                    <img alt="About" class="image-buttons-home" src="pregnant-woman2.jpg">
+                    <img alt="About" class="image-buttons-home" src="photos/pregnant-woman2.jpg">
                     <h2 class="button-text">About</h2>
                 </a>
             </div>
