--- a/howToHelp.html
+++ b/howToHelp.html
@@ -36,7 +36,7 @@
         </h1>
         <div class="image-with-text">
             <a href="https://www.roottrj.org/">		<!--link the button brings you to-->
-                <img class="image-buttons-help" alt="Restoring Our Own Through Transformation" src="ROOT.png">
+                <img class="image-buttons-help" alt="Restoring Our Own Through Transformation" src="photos/ROOT.png">
             </a>
             <p>"ROOTT is a Black women-led reproductive justice organization dedicated to 
                 collectively restoring our well-being through self-determination, collaboration, 
@@ -44,7 +44,7 @@
         </div>
         <div class="image-with-text" id="odd-row">
             <a href="https://voicesforbirthjustice.org/">		<!--link the button brings you to-->
-                <img class="image-buttons-help" alt="Voices for Birth Justice" src="VBJ.png">
+                <img class="image-buttons-help" alt="Voices for Birth Justice" src="photos/VBJ.png">
             </a>
             <p>"Birth Justice is a movement that believes when birthing people recognize their innate 
                 power to make the best health decisions for themselves and their families during all 
@@ -53,7 +53,7 @@
         </div>
         <div class="image-with-text">
             <a href="https://www.blackwomenbirthingjustice.com/">		<!--link the button brings you to-->
-                <img  class="image-buttons-help" alt="Black Women Birthing Justice" src="BWBJ.png">
+                <img  class="image-buttons-help" alt="Black Women Birthing Justice" src="photos/BWBJ.png">
             </a>
             <p>"[Black Women Birthing Justice's] vision is that every pregnant person has an empowering birth and postpartum 
                 experience, free of unnecessary medical interventions and forced separation from 
