--- a/about.html
+++ b/about.html
@@ -40,19 +40,19 @@
                 Gabriella Reynolds is a biology student at the University of Massachusetts, Amherst. 
                 This website is an extension of <a id="aboutLink" href="Final Paper.pdf"> course work completed</a> 
                 for Dr. Alan Goodman at Hamshire College. With a special interest in health inequity, 
-                Gabriella hopes to attend medical school however is currently seeking full-time
-                employment following graduation in the Spring of 2022.
+                Gabriella hopes to attend medical school.
             </p>
         </div>
         <div class="image-with-text" id="odd-row">
             <img class="portrait" alt="Samantha Gaebel" src="photos/Sam-Gaebel.jpg">
             <p>
-                Samantha Gaebel is a first-generation computer science student at 
-                the University of Connecticut with a concentration in Software Design and
-                Development and interest in artificial intelligence and machine learning. 
-                Leveraging her passion for social justice she is hoping to 
-                fill a position where she can use her engineering skills to benefit others. 
-                Sam is currently seeking full-time employment following her graduation in Spring of 2022.
+                Samantha Gaebel is an Engineering Scientist Associate at The Space and Geophysics 
+                Laboratory, Applied Research Laboratories: University of Texas Austin, where 
+                she develops and optimizes software solutions supporting the advancement of innovative 
+                research in electromagnetic propagation, geopositioning, modeling of the environment, 
+                and remote sensing. Leveraging her passion for social justice she hopes to continue to build her 
+                engineering skills in a way that they can be used to benefit others.
+
             </p>
         </div>
     </div>
