Adding Gabby's picture

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
           About Us
         </h1>
         <div class="image-with-text">
-            <img class="portrait" alt="Gabriella Reynolds" src="photos/Birthday.png">
+            <img class="portrait" alt="Gabriella Reynolds" src="photos/Reynolds1.JPG">
             <p>
                 Gabriella Reynolds is a biology student at the University of Massachusetts, Amherst. 
                 This website is an extension of <a id="aboutLink" href="Final Paper.pdf"> course work completed</a> 
