--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Birthing Injustice</title>
+    <title>About</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
   </head>
@@ -14,7 +14,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Birthing Injustice</title>
+    <title>About Us</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
   </head>
@@ -22,8 +22,8 @@
   <body>
     <nav id="mySidepanel" class="sidepanel" open="false">
         <a href="index.html" class="text">Home</a>
+        <a href="info-and-research.html" class="text">Research</a>
         <a href="resources.html" class="text">Resources</a>
-        <a href="howToHelp.html" class="text">How to Help</a>
         <a href="about.html" class="text">About</a>
     </nav>
 
