--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- NAVIGATION MENU -->
     <nav id="mySidepanel" class="sidepanel" open="false">
         <a href="index.html" class="text">Home</a>
+        <a href="info-and-research.html" class="text">Research</a>
         <a href="resources.html" class="text">Resources</a>
-        <a href="howToHelp.html" class="text">How to Help</a>
         <a href="about.html" class="text">About</a>
     </nav>
 
@@ -27,16 +27,16 @@
         <!-- IMAGE BUTTONS -->
         <div id="image-buttons-group">
             <div class="button-with-text">
-                <a href="resources.html">
-                    <img alt="Resources" class="image-buttons-home" src="photos/pregnant-woman.jpg">
+                <a href="info-and-research.html">
+                    <img alt="Information and Resources" class="image-buttons-home" src="photos/pregnant-woman.jpg">
                 </a>
                 <h2 class="button-text">Resources</h2>
             </div>
             <div class="button-with-text">
-                <a href="howToHelp.html">
-                    <img alt="How to Help" class="image-buttons-home" src="photos/woman-with-baby.png">
+                <a href="resources.html">
+                    <img alt="Resources" class="image-buttons-home" src="photos/woman-with-baby.png">
                 </a>
-                <h2 class="button-text">How To Help</h2>
+                <h2 class="button-text">Resources</h2>
             </div>
             <div class="button-with-text">
                 <a href="about.html">
