--- a/info-and-research.html
+++ b/info-and-research.html
@@ -13,7 +13,7 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
-      <title>Birthing Injustice</title>
+      <title>Research</title>
       <link href="style.css" rel="stylesheet" type="text/css" />
       <script src="script.js"></script>
     </head>
@@ -31,7 +31,7 @@
               &#9776;
             </button>
             <h1 id="mainPage" class="title">
-                Information and Resources
+                Information and Research
             </h1>
             <table id="myTable">
                 <tr id="header">
