--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Birthing Injustice</title>
+    <title>Resources</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
   </head>
@@ -32,7 +32,7 @@
             &#9776;
         </button>
         <h1 id="mainPage" class="title">
-          How To Help
+          Resources
         </h1>
         <div class="image-with-text">
             <a href="https://www.roottrj.org/">		<!--link the button brings you to-->
