Fix main image buttons

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div id="image-buttons-group">
             <div class="button-with-text">
                 <a href="info-and-research.html">
-                    <img alt="Information and Resources" class="image-buttons-home" src="photos/pregnant-woman.jpg">
+                    <img alt="Information and Research" class="image-buttons-home" src="photos/pregnant-woman.jpg">
                 </a>
-                <h2 class="button-text">Resources</h2>
+                <h2 class="button-text">Information and Research</h2>
             </div>
             <div class="button-with-text">
                 <a href="resources.html">
