Add table instruction

--- a/info-and-research.html
+++ b/info-and-research.html
@@ -71,6 +71,7 @@
                         </button>
                     </th>
                 </tr>
+                <p id="desc">Click the resource to view it's description</p>
                 <tr class="oddRow" onclick="showHiddenRow('hidden_row1')">
                     <td class="Resource Type">Journal Article</td>
                     <td class="Author">Ranabhat, Chhabi L.; Atkinson, Joel; Park, Myung-Bae; Kim, Chun-Bae; Jakovljevic, Mihajlo</td>
