--- a/info-and-research.html
+++ b/info-and-research.html
@@ -22,7 +22,7 @@
         <nav id="mySidepanel" class="sidepanel" open="false">
             <a href="index.html" class="text">Home</a>
             <a href="info-and-research.html.html" class="text">Research</a>
-            <a href="Resources.html" class="text">Resources</a>
+            <a href="resources.html" class="text">Resources</a>
             <a href="about.html" class="text">About</a>
         </nav>
   
