--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
         <div class="image-with-text">
             <img class="portrait" alt="Gabriella Reynolds" src="photos/Reynolds1.JPG">
             <p>
-                Gabriella Reynolds is a biology student at the University of Massachusetts, Amherst. 
-                This website is an extension of <a id="aboutLink" href="Final Paper.pdf"> course work completed</a> 
-                for Dr. Alan Goodman at Hamshire College. With a special interest in health inequity, 
-                Gabriella hopes to attend medical school.
+                Gabriella Reynolds is a first year medical student at the Lewis Katz School of Medicine. 
+                In 2022, she completed her Bachelor's of Science in Biology at 
+                the University of Massachusettes, Amherst and worked as a Medical Assistant for 
+                Women's Partners in Health Texas in Austin, TX. 
             </p>
         </div>
         <div class="image-with-text" id="odd-row">
