--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
             <p>
                 Gabriella Reynolds is a first year medical student at the Lewis Katz School of Medicine. 
                 In 2022, she completed her Bachelor's of Science in Biology at 
-                the University of Massachusettes, Amherst and worked as a Medical Assistant for 
-                Women's Partners in Health Texas in Austin, TX. 
+                the University of Massachusettes, Amherst. Following her graduation she spent two years working
+                as a Medical Assistant for Women's Partners in Health Texas in Austin, TX. 
             </p>
         </div>
         <div class="image-with-text" id="odd-row">
